# building-extraction

./: LICENSE  building_footprint_DeepLabV3.py  building_footprint_unet_updated.py  create_training_data.ipynb  pyproject.toml
src/building_extraction/: __init__.py  building_footprint_unet.py
