[project]
name = "building-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "albumentations>=2.0.8",
    "geoai-py",
    "geopandas>=1.1.4",
    "jupyter",
    "matplotlib>=3.11.0",
    "numpy",
    "pandas",
    "rasterio",
    "segmentation-models-pytorch>=0.5.0",
    "shapely>=2.1.2",
    "torch>=2.13.0",
    "torchvision>=0.28.0",
    "tqdm>=4.68.4",
]

[project.scripts]
building-extraction = "building_extraction:main"

[build-system]
requires = ["uv_build>=0.11.15,<0.12.0"]
build-backend = "uv_build"

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu132", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu132", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true